[gd_scene load_steps=3 format=3 uid="uid://cgvt8u4rxg0hy"]

[ext_resource type="Script" uid="uid://cwokrg6tm8xd" path="res://scripts/world.gd" id="1_a0qop"]
[ext_resource type="Script" uid="uid://bbyr8u3rgw7y7" path="res://scripts/player.gd" id="2_player"]

[node name="World" type="Node2D"]
script = ExtResource("1_a0qop")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
zoom = Vector2(2, 2)

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("2_player")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(0.4, 0.7, 1, 1)
offset = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ChatPanel" type="PanelContainer" parent="UI"]
offset_left = 10.0
offset_top = 450.0
offset_right = 610.0
offset_bottom = 710.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ChatPanel"]
layout_mode = 2

[node name="ChatHistory" type="RichTextLabel" parent="UI/ChatPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="ChatInput" type="LineEdit" parent="UI/ChatPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Type to chat... Press Enter to send"

[node name="ConnectionStatus" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 33.0
text = "Disconnected"
